# aoc2022

./: .gitignore  Cargo.toml
benches/: all.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  util.rs
src/util/: linear2d.rs  parallel.rs
