[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nom = "7.1"
lazy_static = "1.4"
num = "0.4"
tokio = { version = "1.21", features = ["full"] }

[dev-dependencies]
criterion = "0.4"


[[bench]]
name = "all"
harness = false